--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row align-items-center">
                 <div class="col-md-3">
                     <div class="category-box">
-                        <img class="category-img paddinf-btm" src="icon/book.png" alt="">
+                        <img class="category-img paddinf-btm" src="ICON/book.png" alt="">
                         <h5>1500+ Topics</h5>
                         <p>Learn Anythings</p>
                     </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="category-box">
-                        <img class="category-img paddinf-btm" src="icon/Student.png" alt="">
+                        <img class="category-img paddinf-btm" src="ICON/Student.png" alt="">
                         <h5>1800+ Students</h5>
                         <p>Learn Anythings</p>
                     </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="category-box">
-                        <img class="category-img paddinf-btm" src="icon/Test.png" alt="">
+                        <img class="category-img paddinf-btm" src="ICON/Test.png" alt="">
                         <h5>9k+ Test Token</h5>
                         <p>Learn Anythings</p>
                     </div>
@@ -76,7 +76,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="category-box">
-                        <img class="category-img paddinf-btm" src="icon/Students.png" alt="">
+                        <img class="category-img paddinf-btm" src="ICON/Students.png" alt="">
                         <h5>2000+ Student</h5>
                         <p>Learn Anythings</p>
                     </div>
@@ -115,9 +115,9 @@
                         <button class="btn all-btn">Buy Course</button>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
-                        <p class="footer-display"><img class="footer-icon-resize" src="icon/calendar.png" alt=""> Start
+                        <p class="footer-display"><img class="footer-icon-resize" src="ICON/calendar.png" alt=""> Start
                             20 April,2021</p>
-                        <p class="footer-display"><img class="footer-icon-resize" src="icon/people.png" alt=""> 60 seats
+                        <p class="footer-display"><img class="footer-icon-resize" src="ICON/people.png" alt=""> 60 seats
                         </p>
                     </div>
                 </div>
@@ -129,9 +129,9 @@
                         <button class="btn all-btn">Buy Course</button>
                     </div>
                     <div class="card-footer d-flex justify-content-between">
-                        <p class="footer-display"><img class="footer-icon-resize" src="icon/calendar.png" alt=""> Start
+                        <p class="footer-display"><img class="footer-icon-resize" src="ICON/calendar.png" alt=""> Start
                             20 April,2021</p>
-                        <p class="footer-display"><img class="footer-icon-resize" src="icon/people.png" alt=""> 60 seats
+                        <p class="footer-display"><img class="footer-icon-resize" src="ICON/people.png" alt=""> 60 seats
                         </p>
                     </div>
                 </div>
